--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -37,7 +37,7 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "androidx.annotation:annotation:1.1.0"
-    implementation "androidx.appcompat:appcompat:1.1.0-beta01"
+    implementation "androidx.appcompat:appcompat:1.1.0-rc01"
 
     testImplementation 'junit:junit:4.12'
     testImplementation "androidx.test:core:1.2.0"
