--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -45,7 +45,9 @@ dependencies {
     implementation "androidx.annotation:annotation:1.1.0"
     implementation "androidx.appcompat:appcompat:1.1.0"
 
-    testImplementation 'junit:junit:4.12'
     testImplementation "androidx.test:core:1.2.0"
+    testImplementation 'androidx.test.ext:junit-ktx:1.1.1'
+    testImplementation 'androidx.test:runner:1.2.0'
+    testImplementation 'androidx.test:rules:1.2.0'
     testImplementation "org.robolectric:robolectric:4.3"
 }
